feat: entrega final da automação E2E - UI e API