@@ -3,69 +3,66 @@ package api;
 import io.restassured.RestAssured;
 import io.restassured.http.ContentType;
 import io.restassured.response.Response;
-import java.util.Collections;
-import java.util.HashMap;
+import io.restassured.specification.RequestSpecification;
+
+import java.util.List;
 import java.util.Map;
 
 public class BookStoreClient {
 
     private static final String BASE_URL = "https://demoqa.com";
 
-    public Response criarUsuario(String userName, String userPassword) {
-        Map<String, String> requestPayload = new HashMap<>();
-        requestPayload.put("userName", userName);
-        requestPayload.put("password", userPassword);
-
+    private RequestSpecification baseRequest() {
         return RestAssured.given()
-                .contentType(ContentType.JSON)
-                .body(requestPayload)
-                .post(BASE_URL + "/Account/v1/User");
+                .baseUri(BASE_URL)
+                .contentType(ContentType.JSON);
+    }
+
+    private Map<String, String> createAuthPayload(String userName, String userPassword) {
+        return Map.of(
+                "userName", userName,
+                "password", userPassword
+        );
+    }
+
+    public Response criarUsuario(String userName, String userPassword) {
+        return baseRequest()
+                .body(createAuthPayload(userName, userPassword))
+                .post("/Account/v1/User");
     }
 
     public Response gerarToken(String userName, String userPassword) {
-        Map<String, String> requestPayload = new HashMap<>();
-        requestPayload.put("userName", userName);
-        requestPayload.put("password", userPassword);
-
-        return RestAssured.given()
-                .contentType(ContentType.JSON)
-                .body(requestPayload)
-                .post(BASE_URL + "/Account/v1/GenerateToken");
+        return baseRequest()
+                .body(createAuthPayload(userName, userPassword))
+                .post("/Account/v1/GenerateToken");
     }
 
     public Response validarAutorizacao(String userName, String userPassword) {
-        Map<String, String> requestPayload = new HashMap<>();
-        requestPayload.put("userName", userName);
-        requestPayload.put("password", userPassword);
-
-        return RestAssured.given()
-                .contentType(ContentType.JSON)
-                .body(requestPayload)
-                .post(BASE_URL + "/Account/v1/Authorized");
+        return baseRequest()
+                .body(createAuthPayload(userName, userPassword))
+                .post("/Account/v1/Authorized");
     }
 
     public Response listarLivros() {
-        return RestAssured.given()
-                .contentType(ContentType.JSON)
-                .get(BASE_URL + "/BookStore/v1/Books");
+        return baseRequest()
+                .get("/BookStore/v1/Books");
     }
 
     public Response alugarLivro(String userId, String bookIsbn, String accessToken) {
-        Map<String, Object> requestPayload = new HashMap<>();
-        requestPayload.put("userId", userId);
-        requestPayload.put("collectionOfIsbns", Collections.singletonList(Collections.singletonMap("isbn", bookIsbn)));
+        Map<String, Object> requestPayload = Map.of(
+                "userId", userId,
+                "collectionOfIsbns", List.of(Map.of("isbn", bookIsbn))
+        );
 
-        return RestAssured.given()
+        return baseRequest()
                 .header("Authorization", "Bearer " + accessToken)
-                .contentType(ContentType.JSON)
                 .body(requestPayload)
-                .post(BASE_URL + "/BookStore/v1/Books");
+                .post("/BookStore/v1/Books");
     }
 
     public Response consultarPerfil(String userId, String accessToken) {
-        return RestAssured.given()
+        return baseRequest()
                 .header("Authorization", "Bearer " + accessToken)
-                .contentType(ContentType.JSON)
-                .get(BASE_URL + "/Account/v1/User/" + userId);
+                .get("/Account/v1/User/" + userId);
     }
 }
